<resources>
    <string name="app_name">Reyound</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="credit_card_detail">Your credit card details are securely\nencrypted and passed directly to our PCI IDSS\n compliant Payment Gatway for processing.\n We only store your credit card last 4\n digits and the expiration date. Your traffic\n to this page is secured using a 256-bit SSL\ncertificate</string>
    <string name="uh_oh_you_have_no_orders">Uh, oh you have no orders</string>
    <string name="my_orders">My Orders</string>
    <string name="contact"><b>Write to us</b>\n\ndrop us a line and we will get back to you, as fast as we can email us at</string>
    <string name="facebook"><b>Facebook us</b>\n\nConnect with us on your favourite social network</string>
    <string name="tweet"><b>Tweet us</b>\n\nReach out in140 characters! we are at Reyound store</string>
    <string name="talk_to_us"><b>Talk to us</b>\n\nMonday to Sunday10:00AM to 10PM call us on 9876543210</string>
    <string name="reyound">Reyound is a E-commerce App/website for all lifestyle products.We provide shoppers all over India with good expansion on its portal it brings latest affordable products as per your choice at the lowest price.</string>
    <string name="delivery"><b>Free Shipping</b>\n\nWe Provide Free Shipping on all our product.</string>
    <string name="gifts"><b>Weekly Gifts Members</b>\n\nWe are your one-stop shop for nationwide online store.</string>
    <string name="money"><b>Money Back Guarantee</b>\n\nStart saving straight away with discount offer on items.</string>
    <string name="support"><b>24/7 Support</b>\n\nWe work for all customer to make satisfied shoppers value.</string>
    <string name="privacy">Reyound Privacy Policy\nThis Privacy Policy describes how your personal information is collected, used, and shared when you visit or make a purchase from Reyound.com (the Site)\nPERSONAL INFORMATION WE COLLECT\n\nWhen you visit the Site, we automatically collect certain information about your device, including information about your web browser, IP address, time zone, and some of the cookies that are installed on your device. Additionally, as you browse the Site, we collect information about the individual web pages or products that you view, what websites or search terms referred you to the Site, and information about how you interact with the Site. We refer to this automatically-collected information as Device Information.\nWe collect Device Information using the following technologies:\n– Cookies are data files that are placed on your device or computer and often include an anonymous unique identifier. For more information about cookies
– “Log files” track actions occurring on the Site, and collect data including your IP address, browser type, Internet service provider, referring/exit pages, and date/time stamps.
– “Web beacons,” “tags,” and “pixels” are electronic files used to record information about how you browse the Site.</string>
    <string name="shipping"><b>Shipping Policy</b>\n\nReyound (“we” and “us”) is the operator of (https://Reyound.com) (“Website”). By placing an order through this Website you will be agreeing to the terms below. These are provided to ensure both parties are aware of and agree upon this arrangement to mutually protect and set expectations on our service.\n\n<b>1. General</b>\n\n Subject to stock availability. We try to maintain accurate stock counts on our website but from time-to-time there may be a stock discrepancy and we will not be able to fulfill all your items at time of purchase. In this instance, we will fulfill the available products to you, and contact you about whether you would prefer to await restocking of the back-ordered item or if you would prefer for us to process a refund.\n\n<b>2. Shipping Costs</b>\n\nWe provide Free Shipping for all Products. Incase of Shipping Fees Charged, shipping costs are calculated during checkout based on weight, dimensions and destination of the items in the order. Payment for shipping will be collected with the purchase.
        This price will be the final price for shipping cost to the customer.\n\n<b>3. Returns</b>\n\n<b>3.1 Return Due To Change Of Mind</b>\n\nReyound will happily accept returns due to change of mind as long as a request to return is received by us within 15 days of receipt of item and are returned to us in original packaging, unused and in resellable condition.\nReturn shipping will be paid at the customers expense and will be required to arrange their own shipping.
Once returns are received and accepted, refunds will be processed to store credit for a future purchase. We will notify you once this has been completed through email.
        (Reyound) will refund the value of the goods returned but will NOT refund the value of any shipping paid.\n\n<b>4.1 Transit Time Domestically</b>\n\nIn general, domestic shipments are in transit for 2 – 7 days\n\n<b>4.2 Transit time Internationally</b>\n\nGenerally, orders shipped internationally are in transit for 4 – 22 days. This varies greatly depending on the courier you have selected. We are able to offer a more specific estimate when you are choosing your courier at checkout.\n\n<b>4.3 Dispatch Time</b>\n\nOrders are usually dispatched within 2 business days of payment of order\nOur warehouse operates on Monday – Friday during standard business hours, except on national holidays at which time the warehouse will be closed. In these instances, we take steps to ensure shipment delays will be kept to a minimum.\n\n<b>4.4 Change Of Delivery Address</b>\n\nFor change of delivery address requests, we are able to change the address at any time before the order has been dispatched.\n\n<b>4.5 P.O. Box Shipping</b>\n\nReyound will ship to P.O. box addresses using postal services only. We are unable to offer couriers services to these locations.\n\n<b>4.6 Military Address Shipping</b>\n\nWe are able to ship to military addresses using USPS. We are unable to offer this service using courier services.\n\n<b>4.7 Items Out Of Stock</b>\n\nIf an item is out of stock, we will wait for the item to be available before dispatching your order. Existing items in the order will be reserved while we await this item.
        \n\n<b>4.8 Delivery Time Exceeded</b>\n\nIf delivery time has exceeded the forecasted time, please contact us so that we can conduct an investigation.
        \n\n<b>5. Tracking Notifications</b>\n\nUpon dispatch, customers will receive a tracking link from which they will be able to follow the progress of their shipment based on the latest updates made available by the shipping provider.\n\n<b>6. Parcels Damaged In Transit</b>\n\nIf you find a parcel is damaged in-transit, if possible, please reject the parcel from the courier and get in touch with our customer service. If the parcel has been delivered without you being present, please contact customer service with next steps.\n\n<b>7. Duties and Taxes</b>\n\n<b>7.1 Sales Tax</b>\n\nSales tax has already been applied to the price of the goods as displayed on the website\n\n<b>7.2 Import Duties and Taxes</b>\n\nImport duties and taxes for international shipments may be liable to be paid upon arrival in destination country. This varies by country, and Reyound encourage you to be aware of these potential costs before placing an order with us.\nIf you refuse to to pay duties and taxes upon arrival at your destination country, the goods will be returned to Reyound at the customers expense, and the customer will receive a refund for the value of goods paid, minus the cost of the return shipping. The cost of the initial shipping will not be refunded.\n\n<b>8. Cancellations</b>\n\nIf you change your mind before you have received your order, we are able to accept cancellations at any time before the order has been dispatched. If an order
        \nhas already been dispatched, please refer to our refund policy.\n\n<b>9. Insurance</b>\n\nParcels are insured for loss and damage up to the value as stated by the courier.\n\n<b>9.1 Process for parcel damaged in-transit</b>\n\nWe will process a refund or replacement as soon as the courier has completed their investigation into the claim.
        \n\n<b>9.2 Process for parcel lost in-transit</b>\n\nWe will process a refund or replacement as soon as the courier has conducted an investigation and deemed the parcel lost.
        \n\n<b>10. Customer service</b>\n\nFor all customer service inquiries, please email us at info@reyound.com</string>
    <string name="Return"><b>Return Policy</b>\n\nRETURNS\n\nOur policy lasts 15 days. If 15 days have gone by since your purchase, unfortunately we can’t offer you a refund or exchange.\n\nTo be eligible for a return, your item must be unused and in the same condition that you received it. It must also be in the original packaging.\n\nTo be eligible for a return, your item must be unused and in the same condition that you received it. It must also be in the original packaging.
        \n\nSeveral types of goods are exempt from being returned. Perishable goods such as food, flowers, newspapers or magazines cannot be returned. We also do not accept products that are intimate or sanitary goods, hazardous materials, or flammable liquids or gases.\n\nAdditional non-returnable items:\n* Gift cards\n\nTo complete your return, we require a receipt or proof of purchase.
         \n\nRefunds (if applicable)\nOnce your return is received and inspected, we will send you an email to notify you that we have received your returned item. We will also notify you of the approval or rejection of your refund.\nIf you are approved, then your refund will be processed, and a credit will automatically be applied to your credit card or original method of payment, within a certain amount of days.
         \nLate or missing refunds (if applicable)\nIf you haven’t received a refund yet, first check your bank account again.
          \nThen contact your credit card company, it may take some time before your refund is officially posted.
           \nNext contact your bank. There is often some processing time before a refund is posted.\nIf you’ve done all of this and you still have not received your refund yet, please contact us at info@reyound.com.\n\nSale items (if applicable)\nOnly regular priced items may be refunded, unfortunately sale items cannot be refunded.
        \n\nExchanges (if applicable)\nWe only replace items if they are defective or damaged. If you need to exchange it for the same item, send us an email at info@reyound.com and send your item to: Saibaba Nagar, 90 Feet Road, Near Himalaya Hotel, Mumbai, MH, 400017, India.\n\nGifts\nIf the item was marked as a gift when purchased and shipped directly to you, you’ll receive a gift credit for the value of your return. Once the returned item is received, a gift certificate will be mailed to you.\n\nIf the item wasn’t marked as a gift when purchased, or the gift giver had the order shipped to themselves to give to you later, we will send a refund to the gift giver and he will find out about your return.\n\nShipping\nTo return your product, you should mail your product to: Saibaba Nagar, 90 Feet Road, Near Himalaya Hotel, Mumbai, MH, 400017, India.
        \n\nYou will be responsible for paying for your own shipping costs for returning your item. Shipping costs are non-refundable. If you receive a refund, the cost of return shipping will be deducted from your refund.\n\nDepending on where you live, the time it may take for your exchanged product to reach you, may vary.\n\nIf you are shipping an item over INR 1000, you should consider using a trackable shipping service or purchasing shipping insurance. We don’t guarantee that we will receive your returned item.
</string>
</resources>