<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".activity.ContactUsActivity">

   <com.google.android.material.appbar.AppBarLayout
       android:id="@+id/app_bar_layout"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:background="@color/blue_50"
       android:theme="@style/AppTheme.AppBarOverlay"
       app:elevation="0dp">

      <RelativeLayout
          android:layout_width="match_parent"
          android:layout_height="?attr/actionBarSize">

         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             app:popupTheme="@style/AppTheme.PopupOverlay">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

               <ImageView
                   android:id="@+id/back_btn"
                   android:layout_width="25dp"
                   android:layout_height="25dp"
                   android:layout_gravity="center|left"
                   android:src="@drawable/ic_back" />

               <TextView
                   android:id="@+id/app_title"
                   android:layout_width="wrap_content"
                   android:layout_height="match_parent"
                   android:layout_gravity="center"
                   android:layout_marginStart="-25dp"
                   android:gravity="center"
                   android:text="Online Shopping at Reyound"
                   android:textColor="@color/white"
                   android:textSize="20sp"
                   android:textStyle="bold" />

            </FrameLayout>

         </androidx.appcompat.widget.Toolbar>

      </RelativeLayout>

   </com.google.android.material.appbar.AppBarLayout>



   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:padding="10dp"
       android:orientation="vertical">
      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text=" Contact us"
          android:textSize="22dp"
          android:textStyle="bold"
          android:layout_marginTop="10dp"
          android:textColor="@color/black"/>

      <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
          android:layout_marginTop="10dp"
          android:background="@drawable/btncontact"
      android:orientation="horizontal">

         <ImageView
             android:layout_width="80dp"
             android:layout_height="80dp"
             android:layout_marginTop="10dp"
             android:layout_marginStart="10dp"
            android:background="@color/white"
            android:src="@drawable/contact"/>


   <TextView
       android:layout_width="match_parent"
       android:layout_height="100dp"
      android:layout_marginTop="10dp"
       android:layout_marginStart="10dp"
      android:text="@string/contact" />
   </LinearLayout>

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:background="@drawable/btncontact"
          android:layout_marginTop="10dp"
          android:orientation="horizontal">

         <ImageView
             android:layout_width="80dp"
             android:layout_height="80dp"
             android:layout_marginTop="10dp"
             android:layout_marginStart="10dp"
             android:background="@color/white"
             android:src="@drawable/facebook"/>


         <TextView
             android:layout_width="match_parent"
             android:layout_height="100dp"
             android:layout_marginTop="10dp"
             android:layout_marginStart="10dp"
             android:text="@string/facebook" />
      </LinearLayout>

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:background="@drawable/btncontact"
          android:layout_marginTop="10dp"
          android:orientation="horizontal">

         <ImageView
             android:layout_width="80dp"
             android:layout_height="80dp"
             android:layout_marginTop="10dp"
             android:layout_marginStart="10dp"
             android:background="@color/white"
             android:src="@drawable/twitter"/>


         <TextView
             android:layout_width="match_parent"
             android:layout_height="100dp"
             android:layout_marginTop="10dp"
             android:layout_marginStart="10dp"
             android:text="@string/tweet" />

      </LinearLayout>

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:background="@drawable/btncontact"
          android:layout_marginTop="10dp"
          android:orientation="horizontal">

         <ImageView
             android:layout_width="80dp"
             android:layout_height="80dp"
             android:layout_marginTop="10dp"
             android:layout_marginStart="10dp"
             android:background="@color/white"
             android:src="@drawable/talkus"/>


         <TextView
             android:layout_width="match_parent"
             android:layout_height="100dp"
             android:layout_marginTop="10dp"
             android:layout_marginStart="10dp"
             android:text="@string/talk_to_us" />
      </LinearLayout>



   </LinearLayout>

</LinearLayout>